test/classes/delete-free/owned/owned-transfer-from-nonnil.good
owned-transfer-from-nonnil.chpl:24: In function 'test1c':
owned-transfer-from-nonnil.chpl:27: error: mention of non-nilable variable after ownership is transferred out of it
owned-transfer-from-nonnil.chpl:26: note: ownership transfer occurred here
owned-transfer-from-nonnil.chpl:27: error: mention of non-nilable variable after ownership is transferred out of it
owned-transfer-from-nonnil.chpl:26: note: ownership transfer occurred here
owned-transfer-from-nonnil.chpl:33: In function 'test1d':
owned-transfer-from-nonnil.chpl:36: error: Cannot transfer ownership from a non-nilable variable with a potentially captured alias
owned-transfer-from-nonnil.chpl:66: In function 'test2c':
owned-transfer-from-nonnil.chpl:70: error: mention of non-nilable variable after ownership is transferred out of it
owned-transfer-from-nonnil.chpl:69: note: ownership transfer occurred here
owned-transfer-from-nonnil.chpl:76: In function 'test2d':
owned-transfer-from-nonnil.chpl:81: error: mention of non-nilable variable after ownership is transferred out of it
owned-transfer-from-nonnil.chpl:79: note: ownership transfer occurred here
owned-transfer-from-nonnil.chpl:86: In function 'test2e':
owned-transfer-from-nonnil.chpl:90: error: Cannot transfer ownership from a non-nilable variable with a potentially captured alias
owned-transfer-from-nonnil.chpl:103: In function 'test3':
owned-transfer-from-nonnil.chpl:105: error: mention of non-nilable variable after ownership is transferred out of it
owned-transfer-from-nonnil.chpl:105: note: ownership transfer occurred here
owned-transfer-from-nonnil.chpl:137: In function 'test4c':
owned-transfer-from-nonnil.chpl:141: error: mention of non-nilable variable after ownership is transferred out of it
owned-transfer-from-nonnil.chpl:140: note: ownership transfer occurred here
owned-transfer-from-nonnil.chpl:141: error: mention of non-nilable variable after ownership is transferred out of it
owned-transfer-from-nonnil.chpl:140: note: ownership transfer occurred here
owned-transfer-from-nonnil.chpl:146: In function 'test4d':
owned-transfer-from-nonnil.chpl:150: error: Cannot transfer ownership from a non-nilable variable with a potentially captured alias
owned-transfer-from-nonnil.chpl:157: In function 'acceptRefButReturn':
owned-transfer-from-nonnil.chpl:157: error: Cannot transfer ownership from non-nilable reference argument
